# lua-eigen

./: .gitignore  .gitmodules  CMakeLists.txt
src/: angleaxisf.cpp  angleaxisf.hpp  conjugategradient.cpp  conjugategradient.hpp  eigen.cpp  matrix.cpp  matrix.hpp  matrix2f.cpp  matrix2f.hpp  matrix3f.cpp  matrix3f.hpp  matrix4f.cpp  matrix4f.hpp  quaternionf.cpp  quaternionf.hpp  util.cpp  vector2f.cpp  vector2f.hpp  vector3f.cpp  vector3f.hpp  vector4f.cpp  vector4f.hpp
test/: quaternionf.lua  run.sh  test-cg2.lua  test-cgx.lua  test-index.lua  test-non-square.lua  test-segment.lua  test.lua  wraptest.lua
